force-app/main/default/objects/Genesys_GPE_Config__c/fields/Click_Events_Config__c.field-meta.xml
<CustomField>
    <fullName>Click_Events_Config__c</fullName>
    <label>Click Events Config</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>