force-app/main/default/objects/Genesys_GPE_Config__c/fields/Forms_Track_Config__c.field-meta.xml
<CustomField>
    <fullName>Forms_Track_Config__c</fullName>
    <label>Forms Track Config</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>