force-app/main/default/objects/Genesys_GPE_Config__c/fields/GC_Action_map_Id__c.field-meta.xml
<CustomField>
    <fullName>GC_Action_map_Id__c</fullName>
    <externalId>true</externalId>
    <label>GC Action map Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>