force-app/main/default/objects/Genesys_GPE_Config__c/fields/GC_Domain__c.field-meta.xml
<CustomField>
    <fullName>GC_Domain__c</fullName>
    <label>GC Domain</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>https://apps.mypurecloud.ie</fullName>
            </value>
            <value>
                <fullName>https://apps.mypurecloud.de</fullName>
            </value>
            <value>
                <fullName>https://apps.euw2.pure.cloud</fullName>
            </value>
            <value>
                <fullName>https://apps.euc2.pure.cloud</fullName>
            </value>
            <value>
                <fullName>https://apps.mypurecloud.com</fullName>
            </value>
            <value>
                <fullName>https://apps.use2.us-gov-pure.cloud</fullName>
            </value>
            <value>
                <fullName>https://apps.usw2.pure.cloud</fullName>
            </value>
            <value>
                <fullName>https://apps.cac1.pure.cloud</fullName>
            </value>
            <value>
                <fullName>https://apps.sae1.pure.cloud</fullName>
            </value>
            <value>
                <fullName>https://apps.aps1.pure.cloud</fullName>
            </value>
            <value>
                <fullName>https://apps.apne2.pure.cloud</fullName>
            </value>
            <value>
                <fullName>https://apps.mypurecloud.com.au</fullName>
            </value>
            <value>
                <fullName>https://apps.apne3.pure.cloud</fullName>
            </value>
            <value>
                <fullName>https://apps.mypurecloud.jp</fullName>
            </value>
            <value>
                <fullName>https://apps.mec1.pure.cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>