force-app/main/default/objects/Genesys_GPE_Config__c/fields/GC_Environment__c.field-meta.xml
<CustomField>
    <fullName>GC_Environment__c</fullName>
    <label>GC Environment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>prod-euw1</fullName>
            </value>
            <value>
                <fullName>prod-euw2</fullName>
            </value>
            <value>
                <fullName>prod-euc1</fullName>
            </value>
            <value>
                <fullName>prod-euc2</fullName>
            </value>
            <value>
                <fullName>prod-use1</fullName>
            </value>
            <value>
                <fullName>prod-use2</fullName>
            </value>
            <value>
                <fullName>prod-usw2</fullName>
            </value>
            <value>
                <fullName>prod-apse2</fullName>
            </value>
            <value>
                <fullName>prod-apne1</fullName>
            </value>
            <value>
                <fullName>prod-apne2</fullName>
            </value>
            <value>
                <fullName>prod-apne3</fullName>
            </value>
            <value>
                <fullName>prod-cac1</fullName>
            </value>
            <value>
                <fullName>prod-aps1</fullName>
            </value>
            <value>
                <fullName>prod-sae1</fullName>
            </value>
            <value>
                <fullName>prod-mec1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>