force-app/main/default/objects/Genesys_GPE_Config__c/fields/GC_Messaging_Deployment_ID__c.field-meta.xml
<CustomField>
    <fullName>GC_Messaging_Deployment_ID__c</fullName>
    <label>GC Messaging Deployment ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>