force-app/main/default/objects/Genesys_GPE_Config__c/fields/GC_Open_action_Name__c.field-meta.xml
<CustomField>
    <fullName>GC_Open_action_Name__c</fullName>
    <label>GC Open action Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>