force-app/main/default/objects/Genesys_GPE_Config__c/fields/Idle_Events_Config__c.field-meta.xml
<CustomField>
    <fullName>Idle_Events_Config__c</fullName>
    <label>Idle Events Config</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>