force-app/main/default/objects/Genesys_GPE_Config__c/fields/In_Viewport_Config__c.field-meta.xml
<CustomField>
    <fullName>In_Viewport_Config__c</fullName>
    <label>In Viewport Config</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>