force-app/main/default/objects/Genesys_GPE_Config__c/fields/Pageview_Config__c.field-meta.xml
<CustomField>
    <fullName>Pageview_Config__c</fullName>
    <label>Pageview Config</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>