force-app/main/default/objects/Genesys_GPE_Config__c/fields/Scroll_Depth_Config__c.field-meta.xml
<CustomField>
    <fullName>Scroll_Depth_Config__c</fullName>
    <label>Scroll Depth Config</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>