force-app/main/default/objects/Genesys_GPE_Config__c/fields/SF_Org_Id__c.field-meta.xml
<CustomField>
    <fullName>SF_Org_Id__c</fullName>
    <label>SF Org Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>