force-app/main/default/objects/Genesys_GPE_Config__c/fields/SF_WM_Name__c.field-meta.xml
<CustomField>
    <fullName>SF_WM_Name__c</fullName>
    <inlineHelpText>Get from Embedded Service Deployment, Chat Code Snippet, second value on embeddedservice_bootstrap.init(</inlineHelpText>
    <label>SF WM Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>