force-app/main/default/objects/Genesys_GPE_Config__c/fields/SF_WM_URL__c.field-meta.xml
<CustomField>
    <fullName>SF_WM_URL__c</fullName>
    <inlineHelpText>Get from Embedded Service Deployment, Chat Code Snippet, third value on embeddedservice_bootstrap.init(</inlineHelpText>
    <label>SF WM URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>